crates/fossil-hir/tests/snapshots/diagnostic_corpus__csvw_forward_propagation_typo_with_did_you_mean.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_csvw_fixture(\"csvw_forward_propagation\", \"typo_with_did_you_mean\")"
---
# mode: Db-wired (production typecheck_mapping query)
# bucket: csvw_forward_propagation
Error: D-CSVW-DEPRECATED: explicit CSVW descriptor for source `users` is deprecated; types will be inferred from the file directly. Remove the `schema = "..."` argument.
  at 0..0
Error: this program names no shape document, so it cannot write a property: a property key is the last segment of a predicate IRI that a shape declares. Bring one in with `type { … } = io.shex("shop.shex")`.
  at 0..0
Error: unknown column `naem` — did you mean `name`?
  at 71..76
