crates/fossil-hir/tests/snapshots/diagnostic_corpus__did_you_mean_short_name_one_char.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_db_wired_fixture(\"did_you_mean\", \"short_name_one_char\")"
---
# mode: Db-wired (production typecheck_mapping query)
# bucket: did_you_mean
Error: `ig` is not a field of `users`
  at 86..94
  label 86..94 (MappingRelative): here
  label 42..70 (FileAbsolute): `users` has the fields id, name, age
  help: did you mean `id`?
