crates/fossil-hir/tests/snapshots/diagnostic_corpus__did_you_mean_unrelated_no_suggestion.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_csvw_fixture(\"did_you_mean\", \"unrelated_no_suggestion\")"
---
# mode: Db-wired (production typecheck_mapping query)
# bucket: did_you_mean
Error: unknown column `zzqwxyv`
  at 69..77
