crates/fossil-hir/tests/snapshots/diagnostic_corpus__forward_propagation_typo_with_did_you_mean.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_db_wired_fixture(\"forward_propagation\", \"typo_with_did_you_mean\")"
---
# mode: Db-wired (production typecheck_mapping query)
# bucket: forward_propagation
Error: unknown column `naem` on `users` — did you mean `name`?
  at 86..96
